--- a/KeyLibrary/src/main/res/values/strings.xml
+++ b/KeyLibrary/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">KeyLibrary</string>
     <string name="fail_error_no_data">本页无数据</string>
     <string name="fail_error_retry">点击屏幕重新尝试</string>
+    <string name="camera">照相</string>
+    <string name="album">相册</string>
+    <string name="cancel">取消</string>
 </resources>
